# van-watcher-api

./: .gitignore  Cargo.toml  Dockerfile
api/: Cargo.toml
api/migrations/00000000000000_diesel_initial_setup/: up.sql
api/migrations/2017-11-06-181809_create_user/: down.sql
api/migrations/2017-11-06-182107_create_location_entry/: up.sql
api/src/: location_entry.rs  main.rs  status.rs
migrations/2017-11-06-181809_create_user/: up.sql
migrations/2017-11-06-182107_create_location_entry/: down.sql  up.sql
src/: db.rs  main.rs  status.rs
